# bdns-fetch

./: .gitignore  Makefile  README.en.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci-cd.yml
bdns/api/: __init__.py  __main__.py  config.py  endpoints.py  exceptions.py  fetch_write.py  types.py  utils.py
bdns/fetch/: __init__.py  __main__.py  cli.py  client.py  fetch_write.py  options.py  utils.py
tests/: conftest.py  test_cli.py
tests/commands/: test_actividades.py  test_beneficiarios.py  test_convocatorias_busqueda.py  test_finalidades.py  test_grandesbeneficiarios_busqueda.py  test_organos.py
tests/integration/: conftest.py  test_actividades_integration.py  test_ayudasestado_busqueda_integration.py  test_beneficiarios_integration.py  test_concesiones_busqueda_integration.py  test_convocatorias_busqueda_integration.py  test_convocatorias_documentos_integration.py  test_convocatorias_integration.py  test_convocatorias_pdf_integration.py  test_convocatorias_ultimas_integration.py  test_document_commands_integration.py  test_enum_commands_integration.py  test_finalidades_integration.py  test_grandesbeneficiarios_anios_integration.py  test_grandesbeneficiarios_busqueda_integration.py  test_instrumentos_integration.py  test_minimis_busqueda_integration.py  test_objetivos_integration.py  test_organos_agrupacion_integration.py  test_organos_codigo_integration.py  test_organos_codigoadmin_integration.py  test_organos_integration.py  test_organos_variants_integration.py  test_partidospoliticos_busqueda_integration.py  test_regiones_integration.py  (+12 more)
(+62 files in other folders)
