[tool.poetry]
packages = [{include = "bdns"}]
name = "bdns-api"
version = "0.1.0"
description = "A tool to ingest and process DNS data"
readme = "README.md"
authors = ["José María Cruz Lorite <josemariacruzlorite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.32.3,<3.0.0"
typer = { version = ">=0.15.4,<0.16.0", extras = ["all"] }
polars = ">=0.20.0,<0.21.0"
duckdb = ">=0.10.0,<0.11.0"
pyarrow = ">=15.0.0,<16.0.0"
tqdm = ">=4.65.0,<5.0.0"
aiohttp = ">=3.9.1,<4.0.0"
aiolimiter = ">=1.0.0,<2.0.0"
tenacity = ">=8.2.3,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bdns-api = "bdns.api.__main__:app"
